--- a/arch/arm/boot/dts/imx6qdl-mba6.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-mba6.dtsi
@@ -217,6 +217,22 @@
 	status = "disabled";
 };
 
+&i2c1 {
+	disp0_tsc: edt-ft5x06@38 {
+		compatible = "edt-ft5x06";
+		reg = <0x38>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_ft5x06>;
+		interrupt-parent = <&gpio3>;
+		interrupts = <25 0x0>;
+		/* LCD.PWR_EN -> TSC /WAKE */
+		wake-gpios = <&gpio7 11 GPIO_ACTIVE_HIGH>;
+		/* LCD.RESET -> TSC /RST */
+		reset-gpios = <&gpio1 7 GPIO_ACTIVE_LOW>;
+		status = "disabled";
+	};
+};
+
 &i2c2 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
@@ -325,8 +341,6 @@
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
 				MX6QDL_PAD_EIM_D22__GPIO3_IO22 0x0001b099 /* OTG_PWR */
-				MX6QDL_PAD_GPIO_16__GPIO7_IO11 0x0001b099 /* LCD.PWR_EN */
-				MX6QDL_PAD_GPIO_7__GPIO1_IO07 0x0001b099 /* LCD.RESET */
 				/* LCD.CONTRAST -> Rev 0100 only, not used on Rev.0200*/
 				MX6QDL_PAD_DI0_PIN4__GPIO4_IO20 0x0001b099
 
@@ -417,6 +431,19 @@
 			fsl,pins = <
 				/* 100 k PD, DSE 120 OHM, SPPEED LO */
 				MX6QDL_PAD_SD4_DAT2__PWM4_OUT 0x00003050
+			>;
+		};
+	};
+
+	tsc {
+		pinctrl_ft5x06: ft5x06grp {
+			fsl,pins = <
+				/* LCD.RESET -> TSC /RST */
+				MX6QDL_PAD_GPIO_7__GPIO1_IO07  0x00001090
+				/* LCD.PWR_EN -> TSC /WAKE */
+				MX6QDL_PAD_GPIO_16__GPIO7_IO11 0x00001090
+				/* TSC Interrupt line: HYS, PKE, SPEED MED, DSE 240 OHM */
+				MX6QDL_PAD_EIM_D25__GPIO3_IO25 0x00013088
 			>;
 		};
 	};
