--- a/drivers/mxc/mipi/Kconfig
+++ b/drivers/mxc/mipi/Kconfig
@@ -5,7 +5,8 @@
 menu "MXC MIPI Support"
 
 config MXC_MIPI_CSI2
-	tristate "MIPI CSI2 support"
+#	tristate "MIPI CSI2 support"
+	tristate
 	depends on SOC_IMX6Q
 	default n
 	---help---
