arm: dt: add imx6qp-mba6b-hdmi variant
this adds HDMI support for tqma6qp on mba6

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -424,7 +424,8 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6qp-nitrogen6_max.dtb \
 	imx6qp-sabreauto.dtb \
 	imx6qp-sabresd.dtb \
-	imx6qp-mba6b.dtb
+	imx6qp-mba6b.dtb \
+	imx6qp-mba6b-hdmi.dtb
 dtb-$(CONFIG_SOC_IMX6SL) += \
 	imx6sl-evk.dtb \
 	imx6sl-warp.dtb
