--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -269,11 +269,13 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-mba6a-lvds.dtb \
 	imx6dl-mba6a-multi.dtb \
 	imx6dl-mba6a-pd.dtb \
+	imx6dl-mba6a-ssififo.dtb \
 	imx6dl-mba6b.dtb \
 	imx6dl-mba6b-hdmi.dtb \
 	imx6dl-mba6b-lvds.dtb \
 	imx6dl-mba6b-multi.dtb \
 	imx6dl-mba6b-pd.dtb \
+	imx6dl-mba6b-ssififo.dtb \
 	imx6dl-nitrogen6x.dtb \
 	imx6dl-phytec-pbab01.dtb \
 	imx6dl-rex-basic.dtb \
@@ -305,11 +307,13 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-mba6a-lvds.dtb \
 	imx6q-mba6a-multi.dtb \
 	imx6q-mba6a-pd.dtb \
+	imx6q-mba6a-ssififo.dtb \
 	imx6q-mba6b.dtb \
 	imx6q-mba6b-hdmi.dtb \
 	imx6q-mba6b-lvds.dtb \
 	imx6q-mba6b-multi.dtb \
 	imx6q-mba6b-pd.dtb \
+	imx6q-mba6b-ssififo.dtb \
 	imx6q-nitrogen6x.dtb \
 	imx6q-phytec-pbab01.dtb \
 	imx6q-rex-pro.dtb \
