--- a/arch/arm/boot/dts/imx6qdl-tqma6.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-tqma6.dtsi
@@ -34,13 +34,13 @@
 	status = "okay";
 
 	flash: m25p80@0 {
-		status = "okay";
-		compatible = "micron,n25q128a13", "n25q128a13";
+		compatible = "jedec,spi-nor";
 		spi-max-frequency = <50000000>;
 		reg = <0>;
 		#address-cells = <1>;
 		#size-cells = <1>;
 		m25p,fast-read;
+		status = "okay";
 	};
 };
 
