--- a/arch/arm/boot/dts/imx6dl-mba6a-pd.dts
+++ b/arch/arm/boot/dts/imx6dl-mba6a-pd.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright 2014 Markus Niebel, TQ Systems GmbH
+ * Copyright 2016 Marco Felsch, TQ Systems GmbH
  *
  * The code contained herein is licensed under the GNU General Public
  * License. You may obtain a copy of the GNU General Public License
@@ -10,16 +10,5 @@
  */
 
 #include "imx6dl-mba6a.dts"
-
-&backlight_pd {
-	status = "okay";
-};
-
-&disp0 {
-	status = "okay";
-};
-
-&disp0_tsc {
-	status = "okay";
-};
+#include "imx6qdl-mba6-pd.dtsi"
 
