--- a/arch/arm/boot/dts/imx6dl-mba6b-pd.dts
+++ b/arch/arm/boot/dts/imx6dl-mba6b-pd.dts
@@ -10,16 +10,5 @@
  */
 
 #include "imx6dl-mba6b.dts"
-
-&backlight_pd {
-	status = "okay";
-};
-
-&disp0 {
-	status = "okay";
-};
-
-&disp0_tsc {
-	status = "okay";
-};
+#include "imx6qdl-mba6-pd.dtsi"
 
