--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -723,6 +723,7 @@ dtb-$(CONFIG_SOC_IMX7D) += \
 	imx7d-colibri-emmc-eval-v3.dtb \
 	imx7d-colibri-eval-v3.dtb \
 	imx7d-mba7.dtb \
+	imx7d-mba7-m4.dtb \
 	imx7d-nitrogen7.dtb \
 	imx7d-pico-pi.dtb \
 	imx7d-sbc-imx7.dtb \
@@ -743,6 +744,7 @@ dtb-$(CONFIG_SOC_IMX7D) += \
 	imx7d-sdb-reva-wm8960.dtb \
 	imx7s-colibri-eval-v3.dtb \
 	imx7s-mba7.dtb \
+	imx7s-mba7-m4.dtb \
 	imx7s-warp.dtb \
 	imx7d-12x12-ddr3-arm2.dtb \
 	imx7d-12x12-lpddr3-arm2.dtb \
