tqmls1046a - Add qspi-has-second-chip to devicetree
Add missing devicetree argument to fsl-tqmls1046a.dtsi on qspi node.

Signed-off-by: Timo Herbrecher <t.herbrecher@gateware.de>

--- a/arch/arm64/boot/dts/freescale/fsl-tqmls1046a.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-tqmls1046a.dtsi
@@ -35,6 +35,7 @@
 	num-cs = <2>;
 	bus-num = <0>;
 	status = "okay";
+	fsl,qspi-has-second-chip;
 
 	qflash0: mx66u51235f@0 {
 		#address-cells = <1>;
