tqmls1046a / mbls10xxa: Move esdhc dt properties
Move esdhc device-tree properties to fsl-tqmls1046a.dtsi because eMMC is
placed on module.

Add properties 'non-removable' and 'disable-wp' to esdhc node to
classify eMMC as non-removable. Properties could be deleted from dt by
u-boot when sd-card selected.

Signed-off-by: Timo Herbrecher <t.herbrecher@gateware.de>

--- a/arch/arm64/boot/dts/freescale/fsl-tqmls1046a.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-tqmls1046a.dtsi
@@ -31,6 +31,18 @@
 	};
 };
 
+&esdhc {
+	non-removable;
+	disable-wp;
+
+	mmc-hs200-1_8v;
+	sd-uhs-sdr104;
+	sd-uhs-sdr50;
+	sd-uhs-sdr25;
+	sd-uhs-sdr12;
+
+};
+
 &qspi {
 	num-cs = <2>;
 	bus-num = <0>;
