--- a/arch/arm64/boot/dts/freescale/fsl-tqmls1046a-mbls10xxa.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-tqmls1046a-mbls10xxa.dts
@@ -62,6 +62,10 @@
 
 };
 
+&esdhc {
+	cd-gpios = <&gpio3 2 GPIO_ACTIVE_LOW>;
+	wp-gpios = <&gpio3 3 GPIO_ACTIVE_HIGH>;
+};
 
 &duart0 {
 	status = "okay";
