ARM: dts: imx7: set usbphynop3 vcc-supply imx7s
Signed-off-by: Max Merchel <Max.Merchel@tq-group.com>

--- a/arch/arm/boot/dts/imx7s.dtsi
+++ b/arch/arm/boot/dts/imx7s.dtsi
@@ -95,6 +95,7 @@
 		clocks = <&clks IMX7D_USB_HSIC_ROOT_CLK>;
 		clock-names = "main_clk";
 		#phy-cells = <0>;
+		vcc-supply = <&reg_1p2>;
 	};
 
 	pmu {
