--- a/arch/arm64/boot/dts/freescale/fsl-tqmls1043a.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-tqmls1043a.dtsi
@@ -6,42 +6,7 @@
  */
 
 #include "fsl-ls1043a.dtsi"
-
-&i2c0 {
-	status = "okay";
-
-	temp-sensor@18 {
-		compatible = "jc42";
-		reg = <0x18>;
-	};
-
-	eeprom@50 {
-		compatible = "atmel,24c02";
-		reg = <0x50>;
-	};
-
-	rtc@51 {
-		compatible = "nxp,pcf85063";
-		reg = <0x51>;
-	};
-
-	eeprom@57 {
-		compatible = "atmel,24c256";
-		reg = <0x57>;
-	};
-};
-
-&esdhc {
-	non-removable;
-	disable-wp;
-
-	mmc-hs200-1_8v;
-	sd-uhs-sdr104;
-	sd-uhs-sdr50;
-	sd-uhs-sdr25;
-	sd-uhs-sdr12;
-
-};
+#include "fsl-tqmls10xxa.dtsi"
 
 &qspi {
 	num-cs = <2>;
