--- a/arch/arm64/boot/dts/freescale/fsl-imx8mq-tqma8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mq-tqma8mq.dtsi
@@ -70,7 +70,7 @@
 		regulator-type = "voltage";
 		gpios = <&gpio1 6 GPIO_ACTIVE_HIGH>;
 		states = <900000 0x1 1000000 0x0>;
-		status = "disabled";
+		status = "okay";
 	};
 
 	thermal-zones {
@@ -78,6 +78,17 @@
 			thermal-sensors = <&tmu 0>;
 		};
 	};
+};
+
+&A53_0 {
+	operating-points = <
+		/* kHz    uV */
+		1500000 1000000
+		1300000 1000000
+		1000000 900000
+		800000  900000
+	>;
+	dc-supply = <&reg_tqma8mx_dvfs>;
 };
 
 &gpu {
