--- a/arch/arm64/boot/dts/freescale/fsl-imx8mq-tqma8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mq-tqma8mq.dtsi
@@ -69,7 +69,7 @@
 		regulator-name = "TQMa8Mx_DVFS";
 		regulator-type = "voltage";
 		regulator-settling-time-us = <150000>;
-		gpios = <&gpio1 6 GPIO_ACTIVE_HIGH>;
+		gpios = <&gpio1 6 GPIO_ACTIVE_LOW>;
 		states = <900000 0x1 1000000 0x0>;
 		status = "okay";
 	};
