--- a/arch/arm64/boot/dts/freescale/fsl-imx8mq-tqma8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mq-tqma8mq.dtsi
@@ -68,6 +68,7 @@
 		regulator-max-microvolt = <1000000>;
 		regulator-name = "TQMa8Mx_DVFS";
 		regulator-type = "voltage";
+		regulator-settling-time-us = <150000>;
 		gpios = <&gpio1 6 GPIO_ACTIVE_HIGH>;
 		states = <900000 0x1 1000000 0x0>;
 		status = "okay";
