arm64: dt: fsl-imx8dx-tqma8xds [cosmetic]: fix typo and empty line
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8dx-tqma8xd.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8dx-tqma8xd.dtsi
@@ -38,10 +38,9 @@
 		 * reserved-memory layout
 		 * 0x8800_0000 ~ 0x8FFF_FFFF is reserved for M4
 		 * Shouldn't be used at A core and Linux side.
-		 *
 		 */
 		/*
-		 * move rpmsg_reserved to have mode RAM available
+		 * move rpmsg_reserved to have more RAM available
 		 */
 		rpmsg_reserved: rpmsg@0x84000000 {
 			no-map;
