--- a/arch/arm64/boot/dts/freescale/fsl-imx8qxp-tqma8xqp.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qxp-tqma8xqp.dtsi
@@ -44,8 +44,8 @@
 	imx8qxp-tqma8xqp {
 		pinctrl_lpi2c1: lpi1cgrp {
 			fsl,pins = <
-				SC_P_USB_SS3_TC1_ADMA_I2C1_SCL	0x06000020
-				SC_P_USB_SS3_TC3_ADMA_I2C1_SDA	0x06000020
+				SC_P_MIPI_DSI0_GPIO0_00_ADMA_I2C1_SCL	0x06000020
+				SC_P_MIPI_DSI0_GPIO0_01_ADMA_I2C1_SDA	0x06000020
 			>;
 		};
 
@@ -148,6 +148,45 @@
 		compatible = "spi-flash";
 		spi-max-frequency = <29000000>;
 		spi-nor,ddr-quad-read-dummy = <8>;
+	};
+};
+
+&i2c1 {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	clock-frequency = <100000>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_lpi2c1>;
+	status = "okay";
+
+	/*
+	 * NXP SE97BTP with temperature sensor + eeprom
+	 * ATTENTION: do not use correct dt compatible since this will conflict
+	 * with hwmon sysfs ABI and break device registration
+	 */
+	sensor0: jc42@19 {
+		compatible = "jc42";
+		reg = <0x19>;
+		status = "okay";
+	};
+
+	eeprom1: 24c02@51 {
+		compatible = "atmel,24c02";
+		reg = <0x51>;
+		pagesize = <16>;
+		status = "okay";
+	};
+
+	eeprom0: m24c64@57 {
+		compatible = "st,24c64", "at24";
+		reg = <0x57>;
+		pagesize = <32>;
+		status = "okay";
+	};
+
+	rtc1: ds1339@68 {
+		compatible = "ds1339";
+		reg = <0x68>;
 	};
 };
 
