arm64: dt: fsl-imx8qxp-tqma8xqp-mba8xx: split out common part for module
preparation for TQMa8XD / TQMa8XDP module

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qxp-tqma8xqp-mba8xx.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qxp-tqma8xqp-mba8xx.dts
@@ -17,3 +17,7 @@
 #include "fsl-imx8qxp-tqma8xqp.dtsi"
 #include "fsl-imx8qxp-tqma8xqp-mba8xx.dtsi"
 
+/ {
+	model = "TQ Systems i.MX8QXP TQMa8XQP on MBa8Xx";
+	compatible = "tq,tqma8xqp-mba8xx", "tq,tqma8xqp", "fsl,imx8qxp";
+};
