--- a/arch/arm64/boot/dts/freescale/tqma8xxs-common.dtsi
+++ b/arch/arm64/boot/dts/freescale/tqma8xxs-common.dtsi
@@ -73,7 +73,7 @@
 			ti,tx-internal-delay = <DP83867_RGMIIDCTL_2_50_NS>;
 			ti,dp83867-rxctrl-strap-quirk;
 			ti,led-cfg1 = <0xc100>; /* LED1: Link, LED2: activity */
-			ti,led-cfg2 = <0x1001>; /* active low, LED1/2 driven by phy */
+			ti,led-cfg2 = <0x1441>; /* active high, LED1/2 driven by phy */
 		};
 
 		ethphy3: ethernet-phy@3 {
@@ -83,7 +83,7 @@
 			ti,tx-internal-delay = <DP83867_RGMIIDCTL_2_50_NS>;
 			ti,dp83867-rxctrl-strap-quirk;
 			ti,led-cfg1 = <0xc100>; /* LED1: Link, LED2: activity */
-			ti,led-cfg2 = <0x1001>; /* active low, LED1/2 driven by phy */
+			ti,led-cfg2 = <0x1441>; /* active high, LED1/2 driven by phy */
 		};
 	};
 };
@@ -175,6 +175,8 @@
 			reg = <0>;
 			ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_50_NS>;
 			ti,tx-internal-delay = <DP83867_RGMIIDCTL_2_50_NS>;
+			ti,led-cfg1 = <0x0100>; /* LED1: Link, LED2: activity */
+			ti,led-cfg2 = <0x1001>; /* active low, LED1/2 driven by phy */
 		};
 
 		ethphy3: ethernet-phy@3 {
@@ -182,6 +184,8 @@
 			reg = <3>;
 			ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_50_NS>;
 			ti,tx-internal-delay = <DP83867_RGMIIDCTL_2_50_NS>;
+			ti,led-cfg1 = <0x0100>; /* LED1: Link, LED2: activity */
+			ti,led-cfg2 = <0x1001>; /* active low, LED1/2 driven by phy */
 		};
 	};
 };
