arm64: dt: fsl-imx8qxp-tqma8xx-mba8xx: use common mba8xx fragments
rename MBa8Xx specific fragments to make clear, that they are common
for all TQMa8Xx variants. Do so for the gneric stuff as well as the
LVDS specific. This will be used later on to add LVDS support for
TQMa8XD and TQMa8XDP

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8dx-tqma8xd-mba8xx.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8dx-tqma8xd-mba8xx.dts
@@ -15,7 +15,7 @@
 /dts-v1/;
 
 #include "fsl-imx8dx-tqma8xd.dtsi"
-#include "fsl-imx8qxp-tqma8xqp-mba8xx.dtsi"
+#include "mba8xx-common.dtsi"
 
 / {
 	model = "TQ Systems i.MX8DX TQMa8XD on MBa8Xx";
