--- a/arch/arm64/boot/dts/freescale/fsl-imx8qxp-tqma8xqp-mba8xx-lvds-tm070jvhg33.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qxp-tqma8xqp-mba8xx-lvds-tm070jvhg33.dts
@@ -15,5 +15,5 @@
 /dts-v1/;
 
 #include "fsl-imx8qxp-tqma8xqp.dtsi"
-#include "fsl-imx8qxp-tqma8xqp-mba8xx.dtsi"
-#include "fsl-imx8qxp-tqma8xqp-mba8xx-lvds-tm070jvhg33.dtsi"
+#include "mba8xx-common.dtsi"
+#include "mba8xx-common-lvds-tm070jvhg33.dtsi"
