--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -383,6 +383,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-mba6a-glyn-etm0700g0dh6.dtb \
 	imx6dl-mba6a-glyn-etm0700g0edh6.dtb \
 	imx6dl-mba6a-hdmi.dtb \
+	imx6dl-mba6a-duallvds-tm070jvhg33.dtb \
 	imx6dl-mba6a-lvds.dtb \
 	imx6dl-mba6a-lvds-tm070jvhg33.dtb \
 	imx6dl-mba6a-multi.dtb \
@@ -393,6 +394,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-mba6b-glyn-etm0700g0dh6.dtb \
 	imx6dl-mba6b-glyn-etm0700g0edh6.dtb \
 	imx6dl-mba6b-hdmi.dtb \
+	imx6dl-mba6b-duallvds-tm070jvhg33.dtb \
 	imx6dl-mba6b-lvds.dtb \
 	imx6dl-mba6b-lvds-tm070jvhg33.dtb \
 	imx6dl-mba6b-multi.dtb \
@@ -455,6 +457,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-mba6a-glyn-etm0700g0dh6.dtb \
 	imx6q-mba6a-glyn-etm0700g0edh6.dtb \
 	imx6q-mba6a-hdmi.dtb \
+	imx6q-mba6a-duallvds-tm070jvhg33.dtb \
 	imx6q-mba6a-lvds.dtb \
 	imx6q-mba6a-lvds-tm070jvhg33.dtb \
 	imx6q-mba6a-multi.dtb \
@@ -465,6 +468,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-mba6b-glyn-etm0700g0dh6.dtb \
 	imx6q-mba6b-glyn-etm0700g0edh6.dtb \
 	imx6q-mba6b-hdmi.dtb \
+	imx6q-mba6b-duallvds-tm070jvhg33.dtb \
 	imx6q-mba6b-lvds.dtb \
 	imx6q-mba6b-lvds-tm070jvhg33.dtb \
 	imx6q-mba6b-multi.dtb \
@@ -502,6 +506,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6qp-mba6b-glyn-etm0700g0dh6-hdmi.dtb \
 	imx6qp-mba6b-glyn-etm0700g0edh6.dtb \
 	imx6qp-mba6b-hdmi.dtb \
+	imx6qp-mba6b-duallvds-tm070jvhg33.dtb \
 	imx6qp-mba6b-lvds.dtb \
 	imx6qp-mba6b-lvds-tm070jvhg33.dtb \
 	imx6qp-mba6b-multi.dtb \
