--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -281,9 +281,13 @@ dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx.dtb
 
 imx8mq-tqma8mq-mba8mx-lcdif-lvds-tm070jvhg33-dtbs += imx8mq-tqma8mq-mba8mx.dtb imx8mq-tqma8mq-mba8mx-lvds-tm070jvhg33.dtbo  imx8mq-tqma8mq-mba8mx-lcdif-lvds.dtbo
 imx8mq-tqma8mq-mba8mx-dcss-hdmi-dtbs += imx8mq-tqma8mq-mba8mx.dtb imx8mq-tqma8mq-mba8mx-dcss-hdmi.dtbo
+imx8mq-tqma8mq-mba8mx-dcss-hdmi-imx327-dtbs += imx8mq-tqma8mq-mba8mx.dtb imx8mq-tqma8mq-mba8mx-dcss-hdmi.dtbo imx8mq-tqma8mq-mba8mx-imx327.dtbo
+imx8mq-tqma8mq-mba8mx-dcss-hdmi-imx327-csi2-dtbs += imx8mq-tqma8mq-mba8mx.dtb imx8mq-tqma8mq-mba8mx-dcss-hdmi.dtbo imx8mq-tqma8mq-mba8mx-imx327-csi2.dtbo
 imx8mq-tqma8mq-mba8mx-dcss-lvds-tm070jvhg33-dtbs += imx8mq-tqma8mq-mba8mx.dtb imx8mq-tqma8mq-mba8mx-lvds-tm070jvhg33.dtbo imx8mq-tqma8mq-mba8mx-dcss-lvds.dtbo
 dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx-lcdif-lvds-tm070jvhg33.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx-dcss-hdmi.dtb
+dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx-dcss-hdmi-imx327.dtb
+dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx-dcss-hdmi-imx327-csi2.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx-dcss-lvds-tm070jvhg33.dtb
 
 #dtb-$(CONFIG_ARCH_MXC) += imx8qm-apalis-eval.dtb
