arm64: dts: imx8: img: add #address-cells and #size-cells to I2C MIPI CSI nodes
These properties are required by i2c-controller.yaml bindings.
Add them on SoC level, rather than on board level.

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx8-ss-img.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8-ss-img.dtsi
@@ -299,6 +299,8 @@ img_subsys: bus@58000000 {
 	i2c_mipi_csi0: i2c@58226000 {
 		compatible = "fsl,imx8qxp-lpi2c", "fsl,imx7ulp-lpi2c";
 		reg = <0x58226000 0x1000>;
+		#address-cells = <1>;
+		#size-cells = <0>;
 		interrupts = <8>;
 		interrupt-parent = <&irqsteer_csi0>;
 		clocks = <&clk IMX_SC_R_CSI_0_I2C_0 IMX_SC_PM_CLK_PER>,
@@ -341,6 +343,8 @@ img_subsys: bus@58000000 {
 	i2c_mipi_csi1: i2c@58246000 {
 		compatible = "fsl,imx8qxp-lpi2c", "fsl,imx7ulp-lpi2c";
 		reg = <0x58246000 0x1000>;
+		#address-cells = <1>;
+		#size-cells = <0>;
 		interrupts = <8>;
 		interrupt-parent = <&irqsteer_csi1>;
 		clocks = <&clk IMX_SC_R_CSI_1_I2C_0 IMX_SC_PM_CLK_PER>,
