arm64: dts: tqma8mq: Add HDMI board configuration using DCSS
Monitor with 3840x2160 resolution works out of the box.

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -280,8 +280,10 @@ dtb-$(CONFIG_ARCH_MXC) += imx8mq-wevk.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx.dtb
 
 imx8mq-tqma8mq-mba8mx-lcdif-lvds-tm070jvhg33-dtbs += imx8mq-tqma8mq-mba8mx.dtb imx8mq-tqma8mq-mba8mx-lvds-tm070jvhg33.dtbo  imx8mq-tqma8mq-mba8mx-lcdif-lvds.dtbo
+imx8mq-tqma8mq-mba8mx-dcss-hdmi-dtbs += imx8mq-tqma8mq-mba8mx.dtb imx8mq-tqma8mq-mba8mx-dcss-hdmi.dtbo
 imx8mq-tqma8mq-mba8mx-dcss-lvds-tm070jvhg33-dtbs += imx8mq-tqma8mq-mba8mx.dtb imx8mq-tqma8mq-mba8mx-lvds-tm070jvhg33.dtbo imx8mq-tqma8mq-mba8mx-dcss-lvds.dtbo
 dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx-lcdif-lvds-tm070jvhg33.dtb
+dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx-dcss-hdmi.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8mq-tqma8mq-mba8mx-dcss-lvds-tm070jvhg33.dtb
 
 #dtb-$(CONFIG_ARCH_MXC) += imx8qm-apalis-eval.dtb
