--- a/arch/arm64/boot/dts/freescale/imx8-ss-img.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8-ss-img.dtsi
@@ -293,6 +293,7 @@ img_subsys: bus@58000000 {
 		#interrupt-cells = <2>;
 		power-domains = <&pd IMX_SC_R_CSI_0>;
 		power-domain-names = "pd_csi";
+		status = "disabled";
 	};
 
 	i2c_mipi_csi0: i2c@58226000 {
@@ -334,6 +335,7 @@ img_subsys: bus@58000000 {
 		#interrupt-cells = <2>;
 		power-domains = <&pd IMX_SC_R_CSI_1>;
 		power-domain-names = "pd_csi";
+		status = "disabled";
 	};
 
 	i2c_mipi_csi1: i2c@58246000 {
