--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -366,10 +366,12 @@ imx8qm-tqma8qm-mba8x-lvds0-g133han01-dtbs += imx8qm-tqma8qm-mba8x.dtb imx8qm-tqm
 imx8qm-tqma8qm-mba8x-lvds0-tm070jvhg33-dtbs += imx8qm-tqma8qm-mba8x.dtb imx8qm-tqma8qm-mba8x-lvds0-tm070jvhg33.dtbo
 imx8qm-tqma8qm-mba8x-lvds1-g133han01-dtbs += imx8qm-tqma8qm-mba8x.dtb imx8qm-tqma8qm-mba8x-lvds1-g133han01.dtbo
 imx8qm-tqma8qm-mba8x-lvds1-tm070jvhg33-dtbs += imx8qm-tqma8qm-mba8x.dtb imx8qm-tqma8qm-mba8x-lvds1-tm070jvhg33.dtbo
+imx8qm-tqma8qm-mba8x-rpmsg-dtbs += imx8qm-tqma8qm-mba8x.dtb imx8qm-tqma8qm-mba8x-rpmsg.dtbo
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x-lvds0-g133han01.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x-lvds0-tm070jvhg33.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x-lvds1-g133han01.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x-lvds1-tm070jvhg33.dtb
+dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x-rpmsg.dtb
 
 #dtb-$(CONFIG_ARCH_MXC) += imx8qxp-ai_ml.dtb
 #dtb-$(CONFIG_ARCH_MXC) += imx8qxp-colibri-aster.dtb
