--- a/drivers/gpu/drm/imx/dpu/Kconfig
+++ b/drivers/gpu/drm/imx/dpu/Kconfig
@@ -1,6 +1,5 @@
 config DRM_IMX_DPU
-	tristate "Freescale i.MX DPU DRM support"
+	bool "Freescale i.MX DPU DRM support"
 	depends on DRM_IMX
 	depends on IMX_DPU_CORE
 	default y if DRM_IMX=y
-	default m if DRM_IMX=m
