arm64: dts: mba8mx: Fix audio codec node name
Fix the audio codec node name for all MBa8Mx based boards.
Node names shall represent the function, 'audio-codec' is also explicitly
listed in Devicetree specification v0.3

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx8mq-tqma8mq-mba8mx.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mq-tqma8mq-mba8mx.dts
@@ -64,7 +64,7 @@
 	gpios = <&gpio3 17 GPIO_ACTIVE_LOW>;
 };
 
-&codec {
+&tlv320aic3x04 {
 	clock-names = "mclk";
 	clocks = <&clk IMX8MQ_CLK_SAI3_ROOT>;
 };
