arm64: dts: tqma8mpxl: Fix audio codec node name
Fix the audio codec node name for all TQMa8MPxL based boards.
Node names shall represent the function, 'audio-codec' is also explicitly
listed in Devicetree specification v0.3

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql-mba8mpxl.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql-mba8mpxl.dts
@@ -57,7 +57,7 @@
 		compatible = "fsl,imx-audio-tlv320aic32x4";
 		model = "tqm-tlv320aic32";
 		ssi-controller = <&sai2>;
-		audio-codec = <&codec>;
+		audio-codec = <&tlv320aic3x04>;
 	};
 
 	thermal-zones {
@@ -171,7 +171,7 @@
 		};
 	};
 
-	codec: codec@18 {
+	tlv320aic3x04: audio-codec@18 {
 		compatible = "ti,tlv320aic32x4";
 		reg = <0x18>;
 		clock-names = "mclk";
