arm64: dts: mba8x: Fix audio codec node name
Fix the audio codec node name for all MBa8x based boards.
Node names shall represent the function, 'audio-codec' is also explicitly
listed in Devicetree specification v0.3

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/mba8x.dtsi
+++ b/arch/arm64/boot/dts/freescale/mba8x.dtsi
@@ -163,7 +163,7 @@
 		compatible = "fsl,imx-audio-tlv320aic32x4";
 		model = "tqm-tlv320aic32";
 		ssi-controller = <&sai1>;
-		audio-codec = <&codec>;
+		audio-codec = <&tlv320aic3x04>;
 	};
 };
 
@@ -252,7 +252,7 @@
 };
 
 &i2c1 {
-	codec: tlv320aic32x4@18 {
+	tlv320aic3x04: audio-codec@18 {
 		compatible = "ti,tlv320aic32x4";
 		reg = <0x18>;
 		clocks = <&mclkout0_lpcg 0>;
